Spacing fix

--- a/src/main/CompleteChoice.css
+++ b/src/main/CompleteChoice.css
@@ -1,13 +1,9 @@
 div.CompleteChoice {
     padding-left: 1%;
-    padding-right: 1%;
+    /*padding-right: 1%;*/
     padding-top: 4%;
     display: block;
     width: 100%;
-}
-
-.Paper {
-    padding: 50px;
 }
 
 .AlternativeOption {
@@ -15,9 +11,7 @@ div.CompleteChoice {
     padding-bottom: 10px;
 }
 
-.Paper2 {
-    padding-left: 2px;
-}
+
 
 .SubmitButton {
     width: 10%;
@@ -25,4 +19,8 @@ div.CompleteChoice {
 
 .SubmitButtonItem {
     padding-top: 3%;
+}
+
+.Card {
+    padding-bottom: 10px;
 }
